--- a/src/app/ideation/components/add-idea/add-idea.component.scss
+++ b/src/app/ideation/components/add-idea/add-idea.component.scss
@@ -93,6 +93,7 @@
       .close_button {
         display: none;
       }
+      .btn_medium_secondary,
       .btn_medium_submit,
       .btn_medium_submit_ghost {
         width: 100%;
