--- a/src/app/ideation/components/edit-idea/edit-idea.component.scss
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.scss
@@ -1,149 +1,10 @@
+@use "../add-idea/add-idea.component.scss" as add-idea;
 @use "mixins";
-
 #create_idea_footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: var(--color-surfaces);
-  border-radius: 16px 16px 0 0;
-  max-width: 872px;
-  width: calc(100% - 567px);
-  padding: 16px;
-  z-index: 99999;
-  // padding: 12px 16px;
   position: fixed;
   left: max(224px, calc(200px + ((100% - 1392px)/2)));
-  bottom: 0;
-  gap: 16px;
-  box-shadow: 0px -8px 20px 0px rgba(220, 231, 240, 0.10), 0px -12px 16px 0px rgba(50, 85, 112, 0.04);
 
   @include mixins.tablet {
-    position: fixed;
-    bottom: 0;
     left: 0;
-    gap: 8px;
-    z-index: 9999999;
-    max-width: 100%;
-    width: 100%;
-  }
-  @include mixins.mobile {
-    overflow: auto;
-  }
-  #buttons_row {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-
-    @include mixins.mobile {
-      .close_button {
-        display: none;
-      }
-      .btn_medium_submit_ghost, .btn_medium_submit {
-        width: 100%;
-      }
-    }
-
-
-    #navigate_create {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      background-color: var(--color-surfaces);
-
-      @include mixins.mobile {
-        width: 100%;
-        flex-direction: column;
-      }
-      #chars_left {
-        @include mixins.mobile {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-#post_idea_form_wrap {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  width: 100%;
-
-  .form_header {
-    span {
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 24px; /* 150% */
-    }
-    @include mixins.mobile {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-direction: row;
-    }
-  }
-
-  #subject_counter{
-    @include mixins.mobile {
-      display: none;
-    }
-  }
-  #idea_form {
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
-  }
-}
-.overlay {
-  background-color: rgba(44, 59, 71, 0.6);
-}
-
-#image_upload_input {
-  width: 1px;
-  height: 1px;
-  visibility: hidden;
-  padding: 0;
-  margin: 0;
-}
-
-.idea_images_wrap {
-  display: flex;
-  flex-direction: column;
-  padding: 8px 12px 8px 8px;
-  align-items: center;
-  gap: 8px;
-  align-self: stretch;
-  border-radius: 8px;
-  background-color: var(--color-surface-contrast);
-
-  .image {
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 4px;
-    width: 100%;
-    .image_data {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-
-      @include mixins.mobile {
-        flex-direction: column;
-      }
-      img {
-        width: 80px;
-        transition: all 0.3s ease-in;
-        -webkit-transition: all 0.3s ease-in;
-        -moz-transition: all 0.3s ease-in;
-        -o-transition: all 0.3s ease-in;
-        -ms-transition: all 0.3s ease-in;
-      }
-    }
   }
 }
