FIX edit and add idea forms info notification

--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -260,4 +260,4 @@
     </div>
   </div>
 </div>
-<edit-idea *ngIf="showEdit" [idea]="idea" [topicId]="topic.id" (showEdit)="toggleEdit($event)"></edit-idea>
+<edit-idea *ngIf="showEdit" [idea]="idea" [topicId]="topic.id" [ideation]="ideation" (showEdit)="toggleEdit($event)"></edit-idea>
