--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -17,7 +17,7 @@
   <div id="post_idea_form_wrap">
     <div class="form_header">
       <span translate="COMPONENTS.ADD_IDEA.FOOTER_FORM_TITLE"></span>
-      <div id="anonymous_info_wrap" translate="COMPONENTS.ADD_IDEA.FOOTER_FORM_ANONYMOUS_INFO">
+      <div *ngIf="ideation.allowAnonymous" id="anonymous_info_wrap" translate="COMPONENTS.ADD_IDEA.FOOTER_FORM_ANONYMOUS_INFO">
         <div class="tooltip" tooltip>
           <div class="content_title" translate="COMPONENTS.ADD_IDEA.TOOLTIP_ANONYMOUS_TITLE"></div>
           <div class="content_description" translate="COMPONENTS.ADD_IDEA.TOOLTIP_ANONYMOUS_DESCRIPTION"></div>
