--- a/src/app/topic/components/argument/argument.component.html
+++ b/src/app/topic/components/argument/argument.component.html
@@ -168,12 +168,10 @@
           <button class="btn_ghost_reply_argument" *ngIf="argument.type !== 'reply' && showReplies"
             (click)="showReplies = !showReplies" translate="COMPONENTS.ARGUMENT.LNK_HIDE_REPLIES">
           </button>
-          <ng-container *ngIf="Auth.loggedIn$ | async">
-            <a class="mobile_show" [ngClass]="{disabled: !canReply}" translate="COMPONENTS.ARGUMENT.BTN_REPLY"
-              (click)="showReply=!showReply"></a>
-            <button class="btn_reply_argument mobile_hidden" [ngClass]="{disabled: !canReply}"
-              (click)="showReply=!showReply" translate="COMPONENTS.ARGUMENT.BTN_REPLY"></button>
-          </ng-container>
+          <a class="mobile_show" [ngClass]="{disabled: !canReply}" translate="COMPONENTS.ARGUMENT.BTN_REPLY"
+            (click)="handleShowReply()"></a>
+          <button class="btn_reply_argument mobile_hidden" [ngClass]="{disabled: !canReply}"
+            (click)="handleShowReply()" translate="COMPONENTS.ARGUMENT.BTN_REPLY"></button>
         </div>
       </div>
     </div>
