--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -63,7 +63,7 @@
       </div>
       <div class="vertical_line_separator"></div>
       <div class="like_wrap" [ngClass]="{selected: this.idea.votes.up.selected}">
-        <button class="btn_idea_like" [ngClass]="{disabled: !canVote()}" (click)="doIdeaVote(1)">
+        <button class="btn_idea_like" (click)="doIdeaVote(1)">
           <div class="tooltip_item" tooltip pos="top" [noIcon]="true">
             <div class="content_description" translate="COMPONENTS.IDEABOX.TOOLTIP_LIKE"></div>
           </div>
