--- a/src/styles.scss
+++ b/src/styles.scss
@@ -173,6 +173,12 @@
   @include mixins.heading(18px);
 }
 
+.truncate_text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 a,
 .link {
   text-decoration: none;
